<resources>
    <string name="app_name" translatable="false">Space Race</string>
    <string name="app_id" translatable="false">444006907114</string>
    <string name="slide1Title" translatable="false">Padova Space Week</string>
    <string name="slide2Title">Scavenger hunt</string>
    <string name="slide2Subtitle">Discover the right path finding hints and resolving riddles</string>
    <string name="slide3Title">Challenge your friends!</string>
    <string name="slide4Title">Permissions</string>
    <string name="slide4Subtitle">Space Race uses GPS to track you on the map! Please give to the application the permission to know your location</string>
    <string name="slide5Title">Are you ready to kick off?</string>
    <string name="slide5Subtitle">Put your spacesuit, close your helmet and explore Padova!</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="game_title">Button Clicker 2000!</string>
    <string name="game_blurb">A sample game that tests your ability to click a button. Can you click faster than your friends? Only one way to find out! To play this game with friends, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming transmission</string>
    <string name="accept_popup_invite">Accept</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">do you accept the challenge?</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>
    <string name="sign_in_other_error">There was an issue with sign-in, please try again later.</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="new_match">Create new match</string>
    <string name="join_existing_match">Join existing match</string>
    <string name="high_scores">High scores</string>
    <string name="credits">Credits</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="augugrumi_team" translatable="false">Augugrumi team</string>
    <string name="find_proj">You can find us on</string>
    <string name="creators" translatable="false">Davide Polonio\nFederico Tavella\nMarco Zanella</string>
    <string name="slide1Subtitle">Explore astronomy related places in Padova</string>
    <string name="slide3Subtitle">Sign In with Google, play and win!</string>
    <string name="warningSlider3Title">Login error</string>
    <string name="warningSlider3SubTitle">Something went wrong during the login</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="introduction">Avete mai incontrato Galileo a Padova? E sapete che la   prima stella cometa “con la coda” fu dipinta proprio a Padova da Giotto, nella celebre Cappella degli Scrovegni? Storie di stelle e pianeti, orologi e meridiane si nascondono nelle città, sotto un portico, dentro a una chiesa, sulla facciata di un palazzo e ci raccontano quanto la conoscenza del cielo fosse importante per i nostri antenati. Il progetto “Seconda stella a destra” traccia un itinerario alla ricerca degli elementi celesti disseminati nel centro storico di Padova e permette di scoprire una città non convenzionale, tra astronomia, arte e cultura.    L’itinerario parte simbolicamente da Prato della Valle, ai piedi della statua di Galileo Galilei, che proprio a Padova fece delle scoperte che cambiarono profondamente la nostra conoscenza astronomica. Il percorso si snoda tra i luoghi del centro storico, dentro le mura, e si conclude alla Specola, sede dell’Osservatorio astronomico di INAF – Istituto Nazionale di Astrofisica. Vi porterà a scoprire i luoghi di Galileo, dalla sede dell’Università in cui insegnava alla sua casa, i luoghi del tempo, come meridiane e orologi, e i luoghi del cielo, raffigurazioni cioè di volte stellate, simboli celesti, stemmi.  Potrete seguire l’itinerario per intero, scegliere un’esplorazione tematica o, ancora, creare il vostro percorso, saltando qua e là. L’importante è che ricordiate una cosa: di alzare gli occhi al cielo!</string>
    <string name="card_1_prato_della_valle">Eyes toward the sky and arm pointing at something up there: have you ever met Galileo Galilei in Padua? You will find him in the spectacular Prato della Valle, where he appears as one of the 78 statues of illustrious people that decorate the largest square of the city (maybe the largest in Europe!). The “Prato”, that’s what the locals call this square, although it actually has a elliptical shape and a green island at the centre. It’s in an area reclaimed from a swamp, which was drained at the end of the Eighteenth century. It has always been a lively place and it still hosts a busy market every Saturday.</string>
    <string name="title_card_1">A date with Galileo</string>
    <string name="card_2_sant_antonio_basilica">For locals ”the Saint” is Saint Anthony: they’ll know who you mean. So universal and loved, he doesn’t even need to be named. Artists such as Giotto, Donatello, Mantegna and Giusto de’Menabuoi have all left their mark on “his” grand Basilica over the centuries. Its domes, its cloisters and its works of art reveal stories of devotion, spirituality and beauty. Inside you’ll find various starry vaults and outside a splendid sun on the entrance, a copy of the one by Mantegna, which you’ll find inside the Basilica. It’s an ancient symbol for divinity.</string>
    <string name="title_card_2">Where Mantegna’s Sun shines</string>
    <string name="card_3_galileo_house">Padua is the place where Galileo Galilei lived “the best eighteen years of my whole life”, teaching, studying and observing the sky. He lived in a street once called Borgo Vignali and later rechristened via Galileo Galilei. Apparently that’s the place where he discovered Jupiter’s satellites, a crucial moment in the birth of the modern scientific method. The house is not open to visitors, but there’s a plaque outside in memory of the scientist. For the rest, just free your imagination!</string>
    <string name="title_card_3">Gallileo\'s home</string>
    <string name="card_4_chiesa_san_francesco">Almost hidden in a shadowy street, you will find this beautiful but neglected church, with 26 arches outside. Begun int he fifteenth century, it was once part of a great complex, including a convent, the first hospital in Padua, the charitable Scuola della Carità and the Oratorio di Santa Margherita. Inside the church, between an almost-secret garden and a canvas ascribed to Veronese, you will also find a plaque to Stella Stella, dedicated by his son.</string>
    <string name="title_card_4">The stars on</string>
    <string name="card_5_chiesa_santa_sofia">One of the oldest churches in town, Santa Sofia’s character comes from the contrast between the elegant external structure and the great sparseness of the interior. Its inclined façade can be intimidating, but it’s worth visiting the church because inside you will find other traces of Galileo’s presence. At the end of the nave is baptismal font where Vincenzo, the scientist’s third and last son, was christened.</string>
    <string name="title_card_5">On Galileo’s traces</string>
    <string name="skip_quiz">&lt;&lt; Skip quiz</string>
    <string name="to_quiz">Quiz &gt;&gt;</string>
    <string name="map_style">Map theme</string>
    <string name="map_style_summary">Choose the theme of the map displayed</string>
    <string name="language_title">Application language</string>
    <string name="language_summary">Change the application language</string>
    <string name="lorem_ipsum_short" translatable="false">Lorem ipsum</string>
    <string name="lorem_ipsum" translatable="false">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur? [33] At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet, ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</string>
</resources>