<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/mainBg">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rocket"
        tools:ignore="ContentDescription" />

    <!-- INVITATION POPUP -->

    <TextView
        android:id="@+id/incoming_invitation_text"
        style="@style/InvPopupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="126dp" />

    <Button
        android:id="@+id/button_accept_popup_invitation"
        style="@style/InvPopupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_popup_invite"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="67dp" />


    <!-- "PLEASE WAIT" SCREEN -->

    <TextView
        android:id="@+id/textView"
        style="@style/Blurb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_wait"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="37dp" />


    <Button
        android:id="@+id/new_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_match"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="368dp" />

    <Button
        android:id="@+id/join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_existing_match"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="432dp" />

    <Button
        android:id="@+id/highscores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_scores"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="303dp" />

    <Button
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="503dp" />

    <Button
        android:id="@+id/debug_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="For debug - Map"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="154dp" />


</android.support.constraint.ConstraintLayout>
