<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/explanation_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/place_explanation_title"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_dark_nodisable"
        android:textSize="22sp"
        android:paddingBottom="20dp"
        android:text="@string/lorem_ipsum_short"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width = "match_parent"
        android:layout_height = "fill_parent"
        android:layout_weight = "1"
        android:textSize="18sp"
        android:id="@+id/place_explanation_text"
        android:textColor="@android:color/secondary_text_dark_nodisable"
        android:text="@string/lorem_ipsum"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideOverlay"
        android:fadeScrollbars="true"
        android:fadingEdge="vertical"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_gravity="bottom|end">
        <Button
            android:id="@+id/skip_quiz_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip_quiz"
            android:layout_gravity="bottom"/>

        <Button
            android:id="@+id/to_quiz_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/to_quiz"
            android:layout_gravity="bottom"/>

    </LinearLayout>

</LinearLayout>